RESOLVED FIXED298749
YouTube is in Fullscreen” banner is not liquid glass
https://bugs.webkit.org/show_bug.cgi?id=298749
Summary YouTube is in Fullscreen” banner is not liquid glass
phinehas133
Reported 2025-09-11 16:35:23 PDT
see title
Attachments
phinehas133
Comment 1 2025-09-11 16:35:24 PDT
phinehas133
Comment 2 2025-09-11 16:46:06 PDT
EWS
Comment 3 2025-09-15 22:58:34 PDT
Committed 300014@main (bc0503a149a3): <https://commits.webkit.org/300014@main> Reviewed commits have been landed. Closing PR #50632 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.