"YouTube is in Fullscreen” banner is not liquid glass https://bugs.webkit.org/show_bug.cgi?id=298749 rdar://149900187

Reviewed by Abrar Rahman Protyasha.

Applies UIGlassEffect to the fullscreen dismissal banner("YouTube is in fullscreen") to achieve
the liquid glass style for the new OS, while maintaining a fallback for the old OS.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController loadView]):
(-[WKFullScreenViewController viewDidLayoutSubviews]):

Canonical link: https://commits.webkit.org/300014@main